--- a/index.html
+++ b/index.html
@@ -6,16 +6,42 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 45 个博客、8030 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 45 个博客、8045 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
 
-<li><a href=iphyer.github.io/2024%20Q1%20%E6%80%BB%E7%BB%93.html>2024-04-15 20:54 2024 Q1 总结</a></li>
+<li><a href=babyno.top/%E5%9C%A8%E6%9C%AC%E5%9C%B0%E8%B7%91%E4%B8%80%E4%B8%AAAI%E6%A8%A1%E5%9E%8B%287%29%20-%20%E4%BD%A0%E6%89%93%E8%8D%89%E7%A8%BF%EF%BC%8C%E6%A8%A1%E5%9E%8B%E6%9D%A5%E7%94%BB.html>2024-04-22 14:36:03 在本地跑一个AI模型(7) - 你打草稿，模型来画</a></li>
+
+<li><a href=babyno.top/%E5%9C%A8%E6%9C%AC%E5%9C%B0%E8%B7%91%E4%B8%80%E4%B8%AAAI%E6%A8%A1%E5%9E%8B%286%29%20-%20Stable%20Diffusion%E6%A8%A1%E5%9E%8B%E5%BE%AE%E8%B0%83.html>2024-04-22 11:53:55 在本地跑一个AI模型(6) - Stable Diffusion模型微调</a></li>
+
+<li><a href=blog.mauve.icu/Codeforces%20Round%20939%20%28Div.%202%29.html>2024-04-21 16:39:26 Codeforces Round 939 (Div. 2)</a></li>
+
+<li><a href=sakurawald.github.io/make%20persistent%20windows%2011%20usb%20sticker.html>2024-04-21 01:00:32 make persistent windows 11 usb sticker</a></li>
+
+<li><a href=xnum.github.io/AI%20Singing%20Voice%20Conversion%20%28SVC%29%20%E7%9A%84%E8%A9%A6%E7%8E%A9%E5%BF%83%E5%BE%97.html>2024-04-21 AI Singing Voice Conversion (SVC) 的試玩心得</a></li>
+
+<li><a href=blog.mauve.icu/Codeforces%20Round%20928%20%28Div.%204%29.html>2024-04-20 13:00:44 Codeforces Round 928 (Div. 4)</a></li>
+
+<li><a href=babyno.top/%E5%9C%A8%E6%9C%AC%E5%9C%B0%E8%B7%91%E4%B8%80%E4%B8%AAAI%E6%A8%A1%E5%9E%8B%285%29%20-%20Stable%20Diffusion.html>2024-04-19 10:17:47 在本地跑一个AI模型(5) - Stable Diffusion</a></li>
+
+<li><a href=luyuhuang.github.io/AppImage%3A%20%E4%B8%80%E6%AC%A1%E6%89%93%E5%8C%85%EF%BC%8C%E5%88%B0%E5%A4%84%E8%BF%90%E8%A1%8C.html>2024-04-19 AppImage: 一次打包，到处运行</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20356%20%E6%8A%93%E7%94%9F%E8%9A%9D.html>2024-04-17 09:37:35 新爸五年计划 - 356 抓生蚝</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202415%20-%202024%20%E9%9A%A7%E9%81%93%E9%A9%AC%E8%AE%AD%E7%BB%83%E7%AC%AC%2010%20%E5%91%A8%20%E8%80%95%E8%80%98.html>2024-04-16 11:45:40 折返点 2415 - 2024 隧道马训练第 10 周 耕耘</a></li>
+
+<li><a href=jerkwin.github.io/%E8%BF%9C%E7%A8%8B%E6%9C%8D%E5%8A%A1%E5%99%A8%E6%98%A0%E5%B0%84%E7%A8%8B%E5%BA%8FSiriKali.html>2024-04-16 远程服务器映射程序SiriKali</a></li>
+
+<li><a href=kexizeroing.github.io/Unlock%20the%20power%20of%20Generative%20UI.html>2024-04-16 Unlock the power of Generative UI</a></li>
+
+<li><a href=iphyer.github.io/2024Q1%E6%80%BB%E7%BB%93.html>2024-04-15 20:54 2024Q1总结</a></li>
 
 <li><a href=babyno.top/%E5%9C%A8%E6%9C%AC%E5%9C%B0%E8%B7%91%E4%B8%80%E4%B8%AAAI%E6%A8%A1%E5%9E%8B%284%29%20-%20%E4%BC%9A%E8%AF%B4%E8%AF%9D%E7%9A%84%E6%A8%A1%E5%9E%8B.html>2024-04-15 10:36:13 在本地跑一个AI模型(4) - 会说话的模型</a></li>
+
+<li><a href=codeinchinese.com/%E5%8D%9A%E5%AE%A2%E8%81%9A%E5%90%88%E5%B7%A5%E5%85%B7%E8%BF%9B%E5%B1%95%E2%80%94%E2%80%94%E8%AF%84%E8%AE%BA%E6%94%AF%E6%8C%81%E7%AD%89.html>2024-04-15 博客聚合工具进展——评论支持等</a></li>
 
 <li><a href=blog.mauve.icu/Codeforces%20Round%20927%20%28Div.%203%29.html>2024-04-14 19:55:07 Codeforces Round 927 (Div. 3)</a></li>
 
@@ -8207,6 +8233,8 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9-1914---%E8%B7%91%E6%AD%A5%E5%A6%82%E4%BD%95%E4%B8%8D%E5%8F%97%E4%BC%A4-%EF%BC%88%E4%BA%94%EF%BC%89%E5%88%AB%E8%B7%91.html>2019-04-07 04:07:07 折返点-1914---跑步如何不受伤-（五）别跑</a></li>
 
+<li><a href=codeinchinese.com/%E7%94%A8%E4%B8%AD%E6%96%87%E7%BC%96%E7%A8%8B%E6%98%AF%E7%A7%8D%E4%BB%80%E4%B9%88%E4%BD%93%E9%AA%8C%EF%BC%9F.html>2019-04-07 用中文编程是种什么体验？</a></li>
+
 <li><a href=ditou.org/%E5%85%B3%E4%BA%8E%E6%9C%AC%E7%AB%99.html>2019-04-06 关于本站</a></li>
 
 <li><a href=ditou.org/%E5%8F%8B%E6%83%85%E9%93%BE%E6%8E%A5.html>2019-04-06 友情链接</a></li>
@@ -8852,6 +8880,8 @@
 <li><a href=www.barretlee.com/Linkedin%20%E9%87%87%E8%AE%BF.html>2018-11-27 00:12:00 Linkedin 采访</a></li>
 
 <li><a href=codeinchinese.com/%E4%B8%AD%E6%96%87%E4%BB%A3%E7%A0%81%E7%A4%BA%E4%BE%8B%E4%B9%8BProgramming%20in%20Scala%E7%AC%94%E8%AE%B0%E7%AC%AC%E4%B8%83%E5%85%AB%E7%AB%A0.html>2018-11-27 00:00:00 -0700 中文代码示例之Programming in Scala笔记第七八章</a></li>
+
+<li><a href=codeinchinese.com/java11%E6%94%B6%E8%B4%B9%E4%BA%86%EF%BC%8C%E9%98%BF%E9%87%8C%E4%BC%9A%E4%B8%8D%E4%BC%9A%E6%96%B0%E5%87%BA%E4%B8%80%E9%97%A8%E7%BC%96%E7%A8%8B%E8%AF%AD%E8%A8%80%E5%91%A2.html>2018-11-27 java11收费了，阿里会不会新出一门编程语言呢</a></li>
 
 <li><a href=www.barretlee.com/git%20%E5%B8%B8%E7%94%A8%E6%8A%80%E5%B7%A7.html>2018-11-26 23:29:00 git 常用技巧</a></li>
 
