--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 46 个博客、8288 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 46 个博客、8291 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=blog.mauve.icu/Codeforces%20Round%20940%20%28Div.%202%29%20and%20CodeCraft-23.html>2024-04-27 21:39:12 Codeforces Round 940 (Div. 2) and CodeCraft-23</a></li>
+
+<li><a href=blog.mauve.icu/%E6%97%A5%E6%9C%AC%E6%97%85%E6%B8%B8%E6%9D%82%E8%AE%B0-%E4%B8%9C%E4%BA%AC%E7%AF%87.html>2024-04-23 23:56:42 日本旅游杂记-东京篇</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20357%20%E4%B8%8D%E5%9C%A8%E5%9C%BA.html>2024-04-23 16:01:35 新爸五年计划 - 357 不在场</a></li>
 
 <li><a href=babyno.top/%E5%9C%A8%E6%9C%AC%E5%9C%B0%E8%B7%91%E4%B8%80%E4%B8%AAAI%E6%A8%A1%E5%9E%8B%287%29%20-%20%E4%BD%A0%E6%89%93%E8%8D%89%E7%A8%BF%EF%BC%8C%E6%A8%A1%E5%9E%8B%E6%9D%A5%E7%94%BB.html>2024-04-22 14:36:03 在本地跑一个AI模型(7) - 你打草稿，模型来画</a></li>
 
