--- a/index.html
+++ b/index.html
@@ -6,12 +6,28 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 47 个博客、8367 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 47 个博客、8375 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=jerkwin.github.io/%E5%85%AC%E4%BC%97%E5%8F%B7%E6%96%87%E7%AB%A0%E7%BC%96%E8%BE%91%E6%95%B0%E7%90%86%E5%85%AC%E5%BC%8F.html>2024-05-07 公众号文章编辑数理公式</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202418%20-%202024%20%E9%9A%A7%E9%81%93%E9%A9%AC%E8%AE%AD%E7%BB%83%E7%AC%AC%2013%20%E5%91%A8%20%E7%97%85%E4%BA%86.html>2024-05-06 18:07:56 折返点 2418 - 2024 隧道马训练第 13 周 病了</a></li>
+
+<li><a href=blog.mauve.icu/Codeforces%20Round%20942%20%28Div.%202%29.html>2024-05-05 00:39:10 Codeforces Round 942 (Div. 2)</a></li>
+
+<li><a href=blog.mauve.icu/Codeforces%20Round%20941%20%28Div.%202%29.html>2024-05-03 23:47:21 Codeforces Round 941 (Div. 2)</a></li>
+
+<li><a href=codeinchinese.com/%E5%9B%BD%E5%86%85%E5%88%B0%E5%BA%95%E8%AF%A5%E4%B8%8D%E8%AF%A5%E4%B8%80%E6%A3%92%E5%AD%90%E6%89%93%E6%AD%BB%E5%8F%91%E8%BE%BE%E5%9B%BD%E5%AE%B6%E7%9A%84%E5%BF%AB%E4%B9%90%E6%95%99%E8%82%B2%EF%BC%9F.html>2024-05-03 国内到底该不该一棒子打死发达国家的快乐教育？</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202417%20-%202024%20%E9%9A%A7%E9%81%93%E9%A9%AC%E8%AE%AD%E7%BB%83%E7%AC%AC%2012%20%E5%91%A8%20%E5%BF%83%E6%83%B3%E4%BA%8B%E6%88%90.html>2024-05-01 11:25:56 折返点 2417 - 2024 隧道马训练第 12 周 心想事成</a></li>
+
+<li><a href=young-lord.github.io/qq-win-db-key%20%E4%B8%80%E5%91%A8%E5%B9%B4%E5%95%A6%EF%BC%81.html>2024-05-01 qq-win-db-key 一周年啦！</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202416%20-%202024%20%E9%9A%A7%E9%81%93%E9%A9%AC%E8%AE%AD%E7%BB%83%E7%AC%AC%2011%20%E5%91%A8%20%E5%BC%BA%E5%BA%A6%E5%88%B0%E9%A1%B6.html>2024-04-30 23:27:02 折返点 2416 - 2024 隧道马训练第 11 周 强度到顶</a></li>
 
 <li><a href=blog.mauve.icu/Codeforces%20Round%20940%20%28Div.%202%29%20and%20CodeCraft-23.html>2024-04-27 21:39:12 Codeforces Round 940 (Div. 2) and CodeCraft-23</a></li>
 
