--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 47 个博客、8375 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 47 个博客、8376 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=xnum.github.io/ultrahuman%20ring%20air%20%E5%8F%B0%E7%81%A3%E8%B3%BC%E8%B2%B7%E5%85%BC%E4%BD%BF%E7%94%A8%E5%BF%83%E5%BE%97.html>2024-05-08 ultrahuman ring air 台灣購買兼使用心得</a></li>
+
+<li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E5%9F%BA%E4%BA%8E%E7%8A%B6%E6%80%81%E6%9C%BA%E7%9A%84%E8%A1%8C%E4%B8%BA%E5%AE%9A%E4%B9%89.html>2024-05-08 基于状态机的行为定义</a></li>
 
 <li><a href=jerkwin.github.io/%E5%85%AC%E4%BC%97%E5%8F%B7%E6%96%87%E7%AB%A0%E7%BC%96%E8%BE%91%E6%95%B0%E7%90%86%E5%85%AC%E5%BC%8F.html>2024-05-07 公众号文章编辑数理公式</a></li>
 
@@ -674,8 +678,6 @@
 <li><a href=www.barretlee.com/Load%20%E6%8C%81%E7%BB%AD%E9%A3%99%E9%AB%98%E7%9A%84%E5%8E%9F%E7%90%86%E8%AE%B2%E8%A7%A3%E5%92%8C%E5%BA%94%E6%80%A5%E6%9C%BA%E5%88%B6.html>2023-10-27 15:13:00 Load 持续飙高的原理讲解和应急机制</a></li>
 
 <li><a href=conge.livingwithfcs.org/72%20%E5%B0%8F%E6%97%B6%E5%8B%98%E7%A0%B4%E8%82%89%E4%BD%93%EF%BC%9A%E6%B8%85%E9%98%B3%E7%9A%84%E6%96%AD%E9%A3%9F%E8%87%AA%E6%88%91%E5%AE%9E%E9%AA%8C%E6%97%A5%E5%BF%97.html>2023-10-27 11:24:00 72 小时勘破肉体：清阳的断食自我实验日志</a></li>
-
-<li><a href=xnum.github.io/%E6%88%91%E7%9A%84shaarli%20%E6%96%87%E7%AB%A0%E7%AE%A1%E7%90%86%E9%82%8F%E8%BC%AF.html>2023-10-26 我的shaarli 文章管理邏輯</a></li>
 
 <li><a href=codeinchinese.com/%E4%B8%BA%E4%BB%80%E4%B9%88%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AD%A9%E5%AD%90%E5%AD%A6%E7%9A%84%E7%9F%A5%E8%AF%86%E6%AF%94%E6%AC%A7%E7%BE%8E%E5%A4%9A%E8%BF%99%E4%B9%88%E5%A4%9A%EF%BC%8C%E4%B8%AD%E5%9B%BD%E6%95%99%E8%82%B2%E5%8D%B4%E6%9C%AA%E8%B6%85%E8%BF%87%E6%AC%A7%E7%BE%8E%EF%BC%9F.html>2023-10-25 为什么中国的孩子学的知识比欧美多这么多，中国教育却未超过欧美？</a></li>
 
