--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 47 个博客、8376 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 47 个博客、8377 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=kexizeroing.github.io/JavaScript%20Observer%20APIs.html>2024-05-09 JavaScript Observer APIs</a></li>
 
 <li><a href=xnum.github.io/ultrahuman%20ring%20air%20%E5%8F%B0%E7%81%A3%E8%B3%BC%E8%B2%B7%E5%85%BC%E4%BD%BF%E7%94%A8%E5%BF%83%E5%BE%97.html>2024-05-08 ultrahuman ring air 台灣購買兼使用心得</a></li>
 
