--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 47 个博客、8377 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 47 个博客、8379 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
 
+<li><a href=jerkwin.github.io/%E4%B8%BB%E8%BD%B4%E5%88%86%E6%9E%90%E4%B8%8E%E4%B8%BB%E6%88%90%E5%88%86%E5%88%86%E6%9E%90%E7%9A%84%E6%84%9A%E8%A7%81.html>2024-05-13 主轴分析与主成分分析的愚见</a></li>
+
 <li><a href=kexizeroing.github.io/JavaScript%20Observer%20APIs.html>2024-05-09 JavaScript Observer APIs</a></li>
 
 <li><a href=xnum.github.io/ultrahuman%20ring%20air%20%E5%8F%B0%E7%81%A3%E8%B3%BC%E8%B2%B7%E5%85%BC%E4%BD%BF%E7%94%A8%E5%BF%83%E5%BE%97.html>2024-05-08 ultrahuman ring air 台灣購買兼使用心得</a></li>
 
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E5%9F%BA%E4%BA%8E%E7%8A%B6%E6%80%81%E6%9C%BA%E7%9A%84%E8%A1%8C%E4%B8%BA%E5%AE%9A%E4%B9%89.html>2024-05-08 基于状态机的行为定义</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20359%20%E4%B8%A4%E5%9C%BA%E7%94%9F%E6%97%A5%E4%BC%9A.html>2024-05-07 16:01:35 新爸五年计划 - 359 两场生日会</a></li>
 
 <li><a href=jerkwin.github.io/%E5%85%AC%E4%BC%97%E5%8F%B7%E6%96%87%E7%AB%A0%E7%BC%96%E8%BE%91%E6%95%B0%E7%90%86%E5%85%AC%E5%BC%8F.html>2024-05-07 公众号文章编辑数理公式</a></li>
 
@@ -28,6 +32,8 @@
 <li><a href=blog.mauve.icu/Codeforces%20Round%20941%20%28Div.%202%29.html>2024-05-03 23:47:21 Codeforces Round 941 (Div. 2)</a></li>
 
 <li><a href=codeinchinese.com/%E5%9B%BD%E5%86%85%E5%88%B0%E5%BA%95%E8%AF%A5%E4%B8%8D%E8%AF%A5%E4%B8%80%E6%A3%92%E5%AD%90%E6%89%93%E6%AD%BB%E5%8F%91%E8%BE%BE%E5%9B%BD%E5%AE%B6%E7%9A%84%E5%BF%AB%E4%B9%90%E6%95%99%E8%82%B2%EF%BC%9F.html>2024-05-03 国内到底该不该一棒子打死发达国家的快乐教育？</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20358%20%E5%84%BF%E6%97%B6%E7%9A%84%E7%8E%A9%E4%BC%B4.html>2024-05-01 16:01:35 新爸五年计划 - 358 儿时的玩伴</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202417%20-%202024%20%E9%9A%A7%E9%81%93%E9%A9%AC%E8%AE%AD%E7%BB%83%E7%AC%AC%2012%20%E5%91%A8%20%E5%BF%83%E6%83%B3%E4%BA%8B%E6%88%90.html>2024-05-01 11:25:56 折返点 2417 - 2024 隧道马训练第 12 周 心想事成</a></li>
 
@@ -2624,8 +2630,6 @@
 <li><a href=tifa-233.com/Namomo%20Spring%20Camp%202022%20Div1%20%E6%AF%8F%E6%97%A5%E4%B8%80%E9%A2%98%E8%AE%B0%E5%BD%95%20%28Week%208%29.html>2022-04-16 16:00:56 Namomo Spring Camp 2022 Div1 每日一题记录 (Week 8)</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%9C%89%E5%85%B3%E7%AE%80%E5%8D%95%E5%86%A5%E6%83%B3%E7%BB%83%E4%B9%A0%E7%9A%84%E9%97%AE%E7%AD%94.html>2022-04-15 14:06:42 有关简单冥想练习的问答</a></li>
-
-<li><a href=young-lord.github.io/%E6%9F%90%E6%A0%B8%E9%85%B8%E4%BA%8C%E7%BB%B4%E7%A0%81%E6%95%B0%E6%8D%AE%E8%A7%A3%E6%9E%90.html>2022-04-15 某核酸二维码数据解析</a></li>
 
 <li><a href=jerkwin.github.io/%E5%8A%9B%E5%9C%BA%E6%8B%9F%E5%90%88%E5%B7%A5%E5%85%B7xff%E5%BC%80%E5%8F%91%E6%9D%82%E8%AE%B0.html>2022-04-15 力场拟合工具xff开发杂记</a></li>
 
