--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 47 个博客、8379 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 47 个博客、8381 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=jerkwin.github.io/%E6%99%B6%E8%83%9E%E6%AD%A3%E6%96%B9%E5%8C%96.html>2024-05-14 晶胞正方化</a></li>
+
+<li><a href=lutaonan.com/%E4%B8%8D%E4%B8%8A%E7%8F%AD%E7%9A%84%E7%AC%AC%E4%B8%80%E5%B9%B4.html>2024-05-14 不上班的第一年</a></li>
 
 <li><a href=jerkwin.github.io/%E4%B8%BB%E8%BD%B4%E5%88%86%E6%9E%90%E4%B8%8E%E4%B8%BB%E6%88%90%E5%88%86%E5%88%86%E6%9E%90%E7%9A%84%E6%84%9A%E8%A7%81.html>2024-05-13 主轴分析与主成分分析的愚见</a></li>
 
